# wazuh-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  claude_desktop_config.json.example  docker-compose.yml  openapi.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  security-scan.yml
docs/: ADVANCED_FEATURES.md  DEVELOPMENT.md  SECURITY.md  TROUBLESHOOTING.md
scripts/: setup.sh
src/wazuh_mcp/: __init__.py  audit.py  client.py  context.py  errors.py  indexer.py  logging_config.py  metrics.py  openapi.py  output.py  rate_limiter.py  rbac.py  safe_tool.py  sanitizer.py  server.py  utils.py  validators.py
src/wazuh_mcp/tools/: __init__.py  agents.py  alerts.py  analysis.py  compliance.py  groups.py  hunting.py  lists.py  manager.py  response.py
tests/: __init__.py  test_alerts.py  test_compliance.py  test_hunting.py
